--- a/releases/elasticplay/elastic-search-module_2.10/1.0.0/ivys/ivy.xml
+++ b/releases/elasticplay/elastic-search-module_2.10/1.0.0/ivys/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
-	<info organisation="com.vikasdp.elasticplay" module="elastic-search-module_2.10" revision="1.0.0" status="release" publication="20140803085231">
+	<info organisation="elasticplay" module="elastic-search-module_2.10" revision="1.0.0" status="release" publication="20140803100908">
 		<description>
 		elastic-search-module
 		</description>
